02-Jul-2018: DBI examples: minesweeper and WinRAR
15-Sep-2016: More fundamentals and examples
14-Sep-2016: More of my blog posts are copypasted into the book
06-Sep-2016: Blog posts about FAT12 and fortune file has been copypasted into the book
05-Sep-2016: Blog posts about entropy and encrypted DB case #1 has been
             copypasted into the book
22-Jul-2016: Russian only: new example: ancient "Marriage" DOS game hack
20-Jul-2016: The book is now licensed under CC BY-SA 4.0 (like Wikipedia)
             instead of CC NC-ND 3.0.
16-Jul-2016: Blog posts about C/C++ pointers has been copypasted into the book
14-Jul-2016: No more LITE version, which was somewhat unpopular
04-Nov-2015: All exercises has been moved to http://challenges.re
21-Mar-2015: toupper() function example
18-Mar-2015: Lite (introductory) version
01-Mar-2015: Java examples
04-Dec-2014: restructured: "code patterns" part splitted into "code patterns" and "more advanced examples"
19-Nov-2014: Norton Guide: simplest XOR encryption
11-Nov-2014: a lot of MIPS examples	
20-Oct-2014: more about TLS and TLS callbacks.
03-Oct-2014: atoi() example.
24-Sep-2014: calculating machine epsilon examples (IEEE 754); Duff's device example;
             pointer to function argument example; variadic functions example;
             endianness example.
07-Aug-2014: ~800 pages!
01-Aug-2014: new code pattern: conditional operator
31-Jul-2014: Minesweeper (Windows XP) cheat example
30-Jul-2014: Color Lines game practical joke; Oracle .MSB files example
29-Jul-2014: simple cheating in Millenium DOS game
21-Jul-2014: Oracle .SYM files example
11-Jun-2014: The book has now ~700 pages.
09-Jun-2014: Fibonacci example
28-Apr-2014: A5 version for e-book readers
06-Apr-2014: new exercise: data compressor with a bug
30-Mar-2014: simple patching examples
29-Mar-2014: simple example of cracking simple hash-function by Z3 SMT-solver
25-Mar-2014: more exercises; short GCC, GDB, MSVC, OllyDbg cheatsheets.