@@ -198,7 +198,7 @@ Anschließend versuchen wir einen Wert von der Speicheradresse 0 zu lesen.
 
 Natürlich befindet sich hier nichts unter Win32, womit eine Ausnahme geworfen wird.
 
-Der allererste Handler wird aufgerufen (der von oben) und prüft ob der Code der Konstante
+Der allererste Handler wird aufgerufen (der von oben) und prüft ob der Code der Konstante\\
 \TT{EXCEPTION\_ACCESS\_VIOLATION} entspricht.
 
 Der Code der von der Adresse an der Speicherstelle 0 liest, sieht wie folgt aus:
