@@ -55,7 +55,7 @@ Die Nummer des Aufrufs wird im \EAX-Register übergeben und die restlichen Param
 
 %TODO: style=customasm does not compile in german version
 %\lstinputlisting[caption=A simple example of the usage of two syscalls,style=customasm]{OS/linux_syscall.s}
-\lstinputlisting[caption=Ein einfaches Beispiel zur Nutzung zweier Systemaufrufe]{OS/linux_syscall.s}
+\lstinputlisting[caption=Ein einfaches Beispiel zur Nutzung zweier Systemaufrufe,style=customasmx86]{OS/linux_syscall.s}
 
 Kompilation:
 
