@@ -38,15 +38,14 @@
 \newglossaryentry{link register}
 {
   name=link register,
-  description=(RISC) Un registre où l'adresse de retour est en général stockée. Ceci permet
-  d'appeler une fonction leaf sans utiliser la pile, i.e, plus rapidemment
+  description={(RISC) Un registre où l'adresse de retour est en général stockée. Ceci permet
+  d'appeler une fonction leaf sans utiliser la pile, i.e, plus rapidemment}
 }
 
 \newglossaryentry{anti-pattern}
 {
   name=anti-pattern,
-  description=
-  En général considéré comme une mauvaise pratique
+  description={En général considéré comme une mauvaise pratique}
 }
 
 \newglossaryentry{stack pointer}
@@ -58,13 +57,13 @@
 \newglossaryentry{decrement}
 {
   name=décrémenter,
-  description=Décrémenter de 1
+  description={Décrémenter de 1}
 }
 
 \newglossaryentry{increment}
 {
   name=incrémenter,
-  description=Incrémenter de 1
+  description={Incrémenter de 1}
 }
 
 \newglossaryentry{loop unwinding}
@@ -114,30 +113,26 @@
 \newglossaryentry{dongle}
 {
   name=dongle,
-  description={
-  Un dongle est un petit périphérique se connectant sur un port d'imprimante LPT (par le passé) ou USB.
-  Sa fonction est similaire au tokens de sécurité, il y a de la mémoire et, parfois, un algorithme secret de (crypto-)hachage.
+  description={Un dongle est un petit périphérique se connectant sur un port d'imprimante LPT (par le passé) ou USB.
+  Sa fonction est similaire au tokens de sécurité, il y a de la mémoire et, parfois, un algorithme secret de (crypto-)hachage.}
 }
 
 \newglossaryentry{thunk function}
 {
   name=thunk function,
-  description=
-  {Minuscule fonction qui a un seul rôle: appeler une autre fonction}
+  description={Minuscule fonction qui a un seul rôle: appeler une autre fonction}
 }
 
 \newglossaryentry{user mode}
 {
   name=user mode,
-  description={Un mode CPU restreint dans lequel tout le code des applications est exécuté. cf.}
-  \gls{kernel mode}
+  description={Un mode CPU restreint dans lequel tout le code des applications est exécuté. cf. \gls{kernel mode}}
 }
 
 \newglossaryentry{kernel mode}
 {
   name=kernel mode,
-  description={Un mode CPU sans restriction dans lequel le noyaux de l'OS et les drivers sont exécutés. cf.}
-  \gls{user mode}
+  description={Un mode CPU sans restriction dans lequel le noyaux de l'OS et les drivers sont exécutés. cf. \gls{user mode}}
 }
 
 \newglossaryentry{Windows NT}
@@ -159,9 +154,7 @@
 \newglossaryentry{NaN}
 {
   name=NaN,
-  description={
-    pas un nombre: un cas particulier pour les nombres à virgule flottante, indiquant généralement une erreur
-  }
+  description={pas un nombre: un cas particulier pour les nombres à virgule flottante, indiquant généralement une erreur}
 }
 
 \newglossaryentry{NEON}
@@ -173,49 +166,42 @@
 \newglossaryentry{reverse engineering}
 {
   name=reverse engineering,
-  description=
-  {action d'examiner et de comprendre comment quelque chose fonctionne, parfois dans le but de le reproduire}
+  description={action d'examiner et de comprendre comment quelque chose fonctionne, parfois dans le but de le reproduire}
 }
 
 \newglossaryentry{compiler intrinsic}
 {
   name=compiler intrinsic,
-  description=
-    {Une foncion spécifique à un compilateur, qui n'est pas une fonction usuelle de bibliothèquee.
+  description={Une foncion spécifique à un compilateur, qui n'est pas une fonction usuelle de bibliothèquee.
     Le compilateur génère du code machine spcifique au lieu d'un appel à celui-ci.
     Souvent il s'agit d'une pseudo-fonction pour une instruction \ac{CPU} spécifique. Lire plus:
-    (\myref{sec:compiler_intrinsic})
-  }
+    (\myref{sec:compiler_intrinsic})}
 }
 
 \newglossaryentry{heap}
 {
   name={tas},
-  description={
-  Généralement c'est un gros bout de mémoire fournit par l'\ac{OS} et utilisé par
+  description={Généralement c'est un gros bout de mémoire fournit par l'\ac{OS} et utilisé par
   les applications pour le diviser comme elles le souhaitent. malloc()/free() fonctionnent en utilisant le tas}
 }
 
 \newglossaryentry{name mangling}
 {
   name=name mangling,
-  description={
-  utilisé au moins en \Cpp, où le compilateur doit encoder le nom de la classe, la méthode et le type des arguments dans une chaîne,
+  description={utilisé au moins en \Cpp, où le compilateur doit encoder le nom de la classe, la méthode et le type des arguments dans une chaîne,
   qui devient le nom interne de la fonction. Vous pouvez en lire plus à ce propos ici: \myref{namemangling}}
 }
 
 \newglossaryentry{xoring}
 {
   name=xoring,
-  description=
-  {souvent utilisé en angalis, qui signifie appliquer l'opération \ac{XOR}}
+  description={souvent utilisé en angalis, qui signifie appliquer l'opération \ac{XOR}}
 }
 
 \newglossaryentry{security cookie}
 {
   name=security cookie,
-  description={
-  Une valeur aléatoire, différente à chaque exécution. Vous pouvez en lire plus à ce propos ici: \myref{subsec:BO_protection}}
+  description={Une valeur aléatoire, différente à chaque exécution. Vous pouvez en lire plus à ce propos ici: \myref{subsec:BO_protection}}
 }
 
 \newglossaryentry{tracer}
@@ -227,9 +213,7 @@
 \newglossaryentry{GiB}
 {
   name=GiB,
-  description={
-  Gibioctet: $2^{30}$ or 1024 mebioctets ou 1073741824 octets
-  }
+  description={Gibioctet: $2^{30}$ or 1024 mebioctets ou 1073741824 octets}
 }
 
 \newglossaryentry{CP/M}
@@ -242,34 +226,28 @@
 \newglossaryentry{stack frame}
 {
   name=stack frame,
-  description={
-  Une partie de la pile qui contient des informations spécifiques à la fonction courante:
+  description={Une partie de la pile qui contient des informations spécifiques à la fonction courante:
   variables locales, arguments de la fonction, \ac{RA}, etc.}
 }
 
 \newglossaryentry{jump offset}
 {
   name=jump offset,
-  description={
-  une partie de l'opcode de l'instruction JMP ou Jcc, qui doit être ajoutée à l'adresse de l'instruction suivante,
-  et c'est ainsi que le nouveau \ac{PC} est calculé. Peut-être négatif
-  }
+  description={une partie de l'opcode de l'instruction JMP ou Jcc, qui doit être ajoutée à l'adresse de l'instruction suivante,
+  et c'est ainsi que le nouveau \ac{PC} est calculé. Peut-être négatif}
 }
 
 \newglossaryentry{integral type}
 {
   % TBT?
-  name=integral data type
-  description=
-  {nombre usuel, mais pas un réel. peut être utilisé pour passer des variables de type booléen et des énumérations}
+  name={integral data type},
+  description={nombre usuel, mais pas un réel. peut être utilisé pour passer des variables de type booléen et des énumérations}
 }
 
 \newglossaryentry{real number}
 {
   name={nombre réel},
-  description={
-  {nombre qui peut contenir un point. ceci est \Tfloat et \Tdouble en \CCpp}
-  }
+  description={nombre qui peut contenir un point. ceci est \Tfloat et \Tdouble en \CCpp}
 }
 
 \newglossaryentry{PDB}
@@ -294,8 +272,7 @@
 \newglossaryentry{word}
 {
   name=word,
-  description={
-  Dans les ordinateurs plus vieux que les PCs, la taille de la mémoire était
+  description={Dans les ordinateurs plus vieux que les PCs, la taille de la mémoire était
   souvent mesurée en mots plutôt qu'en octet}
 }
 
@@ -307,8 +284,13 @@
 \newglossaryentry{padding}
 {
   name=padding,
-  description=
-  {\IT{Padding} en anglais signifie rembourrer un oreiller, un matelat, etc. avec quelque chose afin de lui donner la forme désirée.
+  description={\IT{Padding} en anglais signifie rembourrer un oreiller, un matelat, etc. avec quelque chose afin de lui donner la forme désirée.
   En informatique, padding signifie ajouter des octets à un bloc, afin qu'il ait une certaine taille, comme $2^n$ octets.}
+}
+
+\newglossaryentry{basic block}
+{
+  name=\FRph{},
+  description=\FRph{}
 }
 
