@@ -64,7 +64,6 @@
 {
   name={インクリメント},
   description={1の加算}
-  }
 }
 
 \newglossaryentry{loop unwinding}
