@@ -202,7 +202,7 @@
   name=name mangling,
   description={применяется как минимум в \Cpp, где компилятору нужно закодировать имя класса,
   метода и типы аргументов в одной
-  строке, которая будет внутренним именем функции. читайте также здесь}: \myref{namemangling}}
+  строке, которая будет внутренним именем функции. читайте также здесь: \myref{namemangling}}
 }
 
 \newglossaryentry{xoring}
@@ -221,7 +221,7 @@
 \newglossaryentry{tracer}
 {
   name=tracer,
-  description={Моя простейшая утилита для отладки. Читайте больше об этом тут}: \myref{tracer}}
+  description={Моя простейшая утилита для отладки. Читайте больше об этом тут: \myref{tracer}}
 }
 
 \newglossaryentry{GiB}
@@ -298,8 +298,8 @@
 \newglossaryentry{padding}
 {
   name=padding,
-  description=\IT{Padding} в английском языке означает набивание подушки чем-либо для придания ей желаемой (большей)
+  description={\IT{Padding} в английском языке означает набивание подушки чем-либо для придания ей желаемой (большей)
   формы. В компьютерных науках, \IT{padding} означает добавление к блоку дополнительных байт, чтобы он имел нужный
-  размер, например, $2^n$ байт.
+  размер, например, $2^n$ байт.}
 }
 
