@@ -60,7 +60,7 @@
 \newcommand{\Cpp}{C++\xspace}
 \newcommand{\CCpp}{C/C++\xspace}
 \newcommand{\NonOptimizing}{sans optimisation\xspace}
-\newcommand{\Optimizing}{avec optimisation}\xspace}
+\newcommand{\Optimizing}{avec optimisation\xspace}
 \newcommand{\ARMMode}{Mode ARM\xspace}
 \newcommand{\ThumbMode}{Mode Thumb\xspace}
 \newcommand{\ThumbTwoMode}{Mode Thumb-2\xspace}
