@@ -2,11 +2,12 @@
 
 \newcommand{\TitleRE}{リバースエンジニアリング入門}
 
-\newcommand{\TitleUAL}{Understanding Assembly Language}    %TBT
+%TBT
+\newcommand{\TitleUAL}{Understanding Assembly Language}
 
 \newcommand{\AUTHOR}{Dennis Yurichev}
 
-\newcommand*{\EMDASH}{---}}
+\newcommand*{\EMDASH}{---}
 \newcommand{\etc}{etc}
 
 \newcommand{\figname}{fig.\xspace}
@@ -102,7 +103,7 @@
 % C
 \newcommand{\PostIncrement}{後置インクリメント}
 \newcommand{\PostDecrement}{後置デクリメント}
-\newcommand{\PreIncrement}{{前置インクリメント}
+\newcommand{\PreIncrement}{前置インクリメント}
 \newcommand{\PreDecrement}{前置デクリメント}
 
 % MIPS
