@@ -173,18 +173,18 @@
 \definecolor{RED}{rgb}{1,0,0}
 \makeindex
 
-\include{macros}
-\EN{\include{macro_lang_EN}}
-\RU{\include{macro_lang_RU}}
-\FR{\include{macro_lang_FR}}
-\DE{\include{macro_lang_DE}}
-\JPN{\include{macro_lang_JP}}
-\ITA{\include{macro_lang_IT}}
-\PL{\include{macro_lang_PL}}
-\ES{\include{macro_lang_ES}}
-\NL{\include{macro_lang_NL}}
-\TR{\include{macro_lang_TR}}
-\PTBR{\include{macro_lang_PTBR}}
+\input{macros}
+\EN{\input{macro_lang_EN}}
+\RU{\input{macro_lang_RU}}
+\FR{\input{macro_lang_FR}}
+\DE{\input{macro_lang_DE}}
+\JPN{\input{macro_lang_JP}}
+\ITA{\input{macro_lang_IT}}
+\PL{\input{macro_lang_PL}}
+\ES{\input{macro_lang_ES}}
+\NL{\input{macro_lang_NL}}
+\TR{\input{macro_lang_TR}}
+\PTBR{\input{macro_lang_PTBR}}
 
 \ifdefined\UAL
 \newcommand{\TitleMain}{\TitleUAL}
