@@ -1,10 +1,6 @@
 ﻿\subsection{バッファオーバーフロー保護手法}
 \label{subsec:BO_protection}
 
-There are several methods to protect against this scourge, regardless of the \CCpp programmers' negligence.
-MSVC has options like\footnote{compiler-side buffer overflow protection methods:
-\href{http://go.yurichev.com/17133}{wikipedia.org/wiki/Buffer\_overflow\_protection}}:
-
 このソースコードに対する保護手法はいくつかあり、 \CCpp プログラマの怠慢にもかかわらず、
 MSVCにはオプションがあります。\footnote{コンパイラサイドのバッファオーバーフロー保護手法:
 \href{http://go.yurichev.com/17133}{wikipedia.org/wiki/Buffer\_overflow\_protection}}
