@@ -1,3 +1,4 @@
+   Jan-2019: syntax highlighting (comments only so far)
 02-Jul-2018: DBI examples: minesweeper and WinRAR
 15-Sep-2016: More fundamentals and examples
 14-Sep-2016: More of my blog posts are copypasted into the book
